tests-integration/fixtures/checking/1784457540_value_recursive_inferred_fail/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
guardedFailure :: Fail (Text "failure was demanded") => Int
test :: Int

Types

Diagnostics
error[CustomFailure]: failure was demanded
  --> 8:1..8:45
  |
8 | test = if true then test else guardedFailure
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
